TFP-6470 fjerne direkte avhengigheter til jackson2 i test (#731)