@@ -1,8 +1,5 @@
 package no.nav.foreldrepenger.kontrakter.fpsak.tilkjentytelse;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectReader;
-import com.fasterxml.jackson.databind.ObjectWriter;
 import no.nav.vedtak.mapper.json.DefaultJsonMapper;
 import org.junit.jupiter.api.Test;
 
@@ -14,11 +11,8 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 class TilkjentYtelseDagytelseDtoTest {
 
-    private static final ObjectWriter WRITER = DefaultJsonMapper.getJsonMapper().writerWithDefaultPrettyPrinter();
-    private static final ObjectReader READER = DefaultJsonMapper.getJsonMapper().reader();
-
     @Test
-    void testRoundtrip() throws JsonProcessingException {
+    void testRoundtrip() {
         var andelRequest = new TilkjentYtelseDagytelseDto.TilkjentYtelseAndelDto("999999999",
                 200000, 100000, TilkjentYtelseDagytelseDto.Aktivitetstatus.ARBEIDSTAKER,
                 "arb001", BigDecimal.valueOf(100), BigDecimal.valueOf(100));
@@ -28,19 +22,19 @@ class TilkjentYtelseDagytelseDtoTest {
         var grunnlagRequest = new TilkjentYtelseDagytelseDto(Collections.singletonList(periodeRequest));
 
         // Act
-        var json = WRITER.writeValueAsString(grunnlagRequest);
+        var json = DefaultJsonMapper.toJson(grunnlagRequest);
 
-        var grunnlagResponse = (TilkjentYtelseDagytelseDto) READER.forType(TilkjentYtelseDagytelseDto.class).readValue(json);
+        var grunnlagResponse = DefaultJsonMapper.fromJson(json, TilkjentYtelseDagytelseDto.class);
 
         // Assert
         assertThat(grunnlagResponse).isNotNull();
         assertThat(grunnlagResponse.perioder()).hasSize(1);
-        var periodeResponse = grunnlagResponse.perioder().get(0);
+        var periodeResponse = grunnlagResponse.perioder().getFirst();
         assertThat(periodeResponse.fom()).isEqualTo(periodeRequest.fom());
         assertThat(periodeResponse.tom()).isEqualTo(periodeRequest.tom());
         assertThat(periodeResponse.dagsats()).isEqualTo(periodeRequest.dagsats());
         assertThat(periodeResponse.andeler()).hasSize(1);
-        var andelResponse = periodeResponse.andeler().get(0);
+        var andelResponse = periodeResponse.andeler().getFirst();
         assertThat(andelResponse.aktivitetstatus()).isEqualTo(andelRequest.aktivitetstatus());
         assertThat(andelResponse.arbeidsforholdId()).isEqualTo(andelRequest.arbeidsforholdId());
         assertThat(andelResponse.arbeidsgiverReferanse()).isEqualTo(andelRequest.arbeidsgiverReferanse());
